--- a/øving2/package.json
+++ b/øving2/package.json
@@ -9,8 +9,10 @@
     "test:unit": "vitest --environment jsdom --root src/"
   },
   "dependencies": {
+    "axios": "^1.3.1",
     "pinia": "^2.0.28",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
