--- a/øving2/package.json
+++ b/øving2/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test:unit": "vitest --environment jsdom --root src/"
+    "test:unit": "vitest --environment jsdom --root src/",
+    "backend": "json-server -w data/api.json"
   },
   "dependencies": {
     "axios": "^1.3.1",
@@ -15,10 +16,12 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@pinia/testing": "^0.0.14",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.2.6",
     "jsdom": "^20.0.3",
+    "json-server": "^0.17.1",
     "vite": "^4.0.0",
-    "vitest": "^0.25.6"
+    "vitest": "^0.25.8"
   }
 }
