--- a/P2P3/package.json
+++ b/P2P3/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
     "test:unit": "vitest --environment jsdom --root src/",
-    "backend": "json-server -w data/api.json"
+    "backend": "json-server -w data/api.json",
+    "cy:run": "cypress run",
+    "test:coverage": "vitest run --coverage --environment jsdom"
   },
   "dependencies": {
     "axios": "^1.3.1",
+    "cypress": "^12.5.1",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
@@ -18,7 +20,9 @@
   "devDependencies": {
     "@pinia/testing": "^0.0.14",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vitest/coverage-c8": "^0.28.5",
     "@vue/test-utils": "^2.2.6",
+    "cypress": "^12.0.2",
     "jsdom": "^20.0.3",
     "json-server": "^0.17.1",
     "vite": "^4.0.0",
