--- a/P4/backend/src/main/resources/application.properties
+++ b/P4/backend/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+server.port = 3333
+logging.level.root=INFO
+logging.level.no.ntnu.idatt2105.l4.demo.web.Lesson4Controller=TRACE
 
+#fiks filepath
+logging.file.path=/home/logs 
+logging.file.name=calculator.log
+
+#Må sjekke at dette stemmer
