--- a/P4/frontend/package.json
+++ b/P4/frontend/package.json
@@ -7,8 +7,7 @@
     "build": "vite build",
     "test:unit": "vitest --environment jsdom --root src/",
     "backend": "json-server -w data/api.json",
-    "cy:run": "cypress run",
-    "test:coverage": "vitest run --coverage --environment jsdom"
+    "cy:run": "cypress run"
   },
   "dependencies": {
     "axios": "^1.3.1",
