--- a/P4P5/frontend/package.json
+++ b/P4P5/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.1",
     "cypress": "^12.5.1",
     "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.1.0",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
